--- a/docs/decision_language/master06-service_interface.adoc
+++ b/docs/decision_language/master06-service_interface.adoc
@@ -1,7 +1,3 @@
 = DSM Service Model
 
-The following shows an outline idea of a DSM service interface. This could be made to cater for talking to an OMG DMN service. It could also incorporate the CDS-hooks idea, which is just a recommendation structure.
-
-[.text-center]
-.Service Model
-image::{diagrams_uri}/conceptual_service_model.svg[id=conceptual_service_model, align="center"]
+TBD
