--- a/docs/UML/classes/decision_module.adoc
+++ b/docs/UML/classes/decision_module.adoc
@@ -9,27 +9,15 @@ h|*Description*
 2+a|A container for a set of statements along with related BMM definitions, meta-data, terminology and bindings.
 
 h|*Inherit*
-2+|`BMM_MODULE`, `AUTHORED_RESOURCE`
+2+|`AUTHORED_RESOURCE`, `BMM_CLASS`
 
 h|*Attributes*
 ^h|*Signature*
 ^h|*Meaning*
 
 h|*0..1*
-|*conditions*: `List<DS_CONDITION_DEF>`
-a|Boolean conditions defined by module for use in rules.
-
-h|*0..1*
-|*rules*: `List<DS_RULE>`
-a|Ruleset consisting of rules of various types.
-
-h|*0..1*
 |*proxy_properties*: `List<BMM_PROPERTY>`
 a|Properties representing real-world objects, such as the patient state, the patient history (logical EHR) etc.
-
-h|*0..1*
-|*proxy_objects*: `List<PROXY_MODULE>`
-a|Imported proxy modules
 
 h|*0..1*
 |*definitions*: `List<BMM_CONSTANT>`
