--- a/docs/UML/classes/proxy_service_backend.adoc
+++ b/docs/UML/classes/proxy_service_backend.adoc
@@ -1,9 +1,9 @@
-=== PROXY_SERVICE_I Interface
+=== PROXY_SERVICE_BACKEND Interface
 
 [cols="^1,3,5"]
 |===
 h|*Interface*
-2+^h|*PROXY_SERVICE_I*
+2+^h|*PROXY_SERVICE_BACKEND*
 
 h|*Description*
 2+a|
