--- a/docs/UML/classes/tracked_value_def.adoc
+++ b/docs/UML/classes/tracked_value_def.adoc
@@ -1,9 +1,9 @@
-=== TRACKED_VARIABLE_DEF Class
+=== TRACKED_VALUE_DEF Class
 
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*TRACKED_VARIABLE_DEF*
+2+^h|*TRACKED_VALUE_DEF*
 
 h|*Description*
 2+a|
